--- a/frontendts/styles/globals.css
+++ b/frontendts/styles/globals.css
@@ -19,6 +19,18 @@ a {
   box-sizing: border-box;
 }
 
+textarea {
+  border: none;
+  overflow: auto;
+  outline: none;
+
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+
+  resize: none; /*remove the resize handle on the bottom right*/
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
@@ -55,11 +67,17 @@ h2 {
   flex-grow: 1;
 }
 
-button {
+.add-cell-action {
   border-radius: 3px;
-  border: solid 1px black;
-  background: #868686;
+  border: solid 1px #d2d1d1;
+  background: #f1f1f1;
   padding: 4px;
+}
+
+.add-cell-action:hover {
+  border: solid 1px #9c9c9c;
+  background: #c6c6c6;
+  transition: border 0.3s, background 0.3s;
 }
 
 @keyframes append-animate-right {
@@ -74,11 +92,41 @@ button {
 }
 
 .line-area {
+  width: 100%;
+  padding: 8px 16px;
+}
+
+.sick-fade-in {
+  animation: append-animate-right .3s cubic-bezier(.42,0,.58,1);
+}
+
+.line-container {
   border: solid 1px rgba(79, 79, 79, 0.6);
   border-radius: 3px;
   width: 100%;
-  padding: 8px 16px;
-  animation: append-animate-right .5s cubic-bezier(.72,.05,.36,1.02);
+  margin-bottom: 24px;
+}
+
+.line-container.focused {
+  outline: solid 2px rgba(66, 99, 255, 0.6);
+  border-color: transparent;
+  transition: outline 0.1s;
+}
+
+.line-actions {
+  display: flex;
+  border-bottom: 1px solid rgba(79, 79, 79, 0.6);
+}
+
+.line-action {
+  font-weight: 800;
+  padding: 4px 16px;
+}
+
+.line-action:hover {
+  color: blue;
+  background-color: #eaeaea;
+  transition: color 0.5s, background-color 0.5s;
 }
 
 .icon-button {
