--- a/frontendts/styles/globals.css
+++ b/frontendts/styles/globals.css
@@ -100,13 +100,27 @@ h2 {
   animation: append-animate-right .3s cubic-bezier(.42,0,.58,1);
 }
 
-.line-container {
+.lines-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
   border: solid 1px rgba(79, 79, 79, 0.6);
   border-radius: 3px;
-  width: 100%;
-  margin-bottom: 24px;
 }
 
+.line-container {
+  border: none;
+  width: 100%;
+  margin: 0px;
+}
+
+.line-container textarea{
+  transition: 25ms;
+}
+
+.line-container textarea:hover{
+  background-color: rgba(255, 255, 0, 0.1);
+}
 .line-container.focused {
   outline: solid 2px rgba(66, 99, 255, 0.6);
   border-color: transparent;
