--- a/frontendts/styles/globals.css
+++ b/frontendts/styles/globals.css
@@ -100,13 +100,20 @@ h2 {
   animation: append-animate-right .3s cubic-bezier(.42,0,.58,1);
 }
 
+
 .line-container {
-  border: solid 1px rgba(79, 79, 79, 0.6);
-  border-radius: 3px;
+  border: none;
   width: 100%;
-  margin-bottom: 24px;
+  margin: 0px;
 }
 
+.line-container input{
+  transition: 25ms;
+}
+
+/* .line-container input:hover{
+  background-color: rgba(255, 255, 0, 0.1);
+} */
 .line-container.focused {
   outline: solid 2px rgba(66, 99, 255, 0.6);
   border-color: transparent;
